[package]
name = "add-table-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
core-wasm-ast = "0.1.7"
leb128 = "0.2.5"
wasm-encoder = "0.24.0"
wasm-parser = "0.1.7"
